final changes by sachin

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <img src="assets/img/icon/location-dot.svg" alt="img" />
               </div>
               <div class="details">
-                <p>Location</p>
+                <!-- <p>Location</p> -->
                 <p>
                   NeoVista, Nr, Forest Ply & Hardware, 4 Rasta, Silvassa - Vapi
                   Rd, opp. Solitaire Business Center, Imran Nagar, Daman, Vapi,
@@ -333,7 +333,7 @@
                 <img src="assets/img/icon/phone.svg" alt="img" />
               </div>
               <div class="details">
-                <p>Phone</p>
+                <!-- <p>Phone</p> -->
                 <p>
                   <a href="tel:+91 90813 37700" class="info-box_link"
                     >+91 90813 37700</a
@@ -346,7 +346,7 @@
                 <img src="assets/img/icon/envelope.svg" alt="img" />
               </div>
               <div class="details">
-                <p>Mail</p>
+                <!-- <p>Mail</p> -->
                 <p>
                   <a href="Mail@vapisvip.com" class="info-box_link"
                     >Mail@vapisvip.com</a
@@ -734,33 +734,33 @@ Counter Area
           <div class="counter-card">
             <div class="media-body">
               <h2 class="box-number">
-                <span class="counter-number">850</span>+
+                <span class="counter-number">26</span>+
               </h2>
-              <p class="box-text">ELEGANT OFFICE</p>
+              <p class="box-text">YEARS</p>
             </div>
           </div>
           <div class="counter-card">
             <div class="media-body">
               <h2 class="box-number">
-                <span class="counter-number">950</span>+
+                <span class="counter-number">4.5</span>
               </h2>
-              <p class="box-text">LUXURY SPACES</p>
+              <p class="box-text">MILLION SQ.FT</p>
             </div>
           </div>
           <div class="counter-card">
             <div class="media-body">
               <h2 class="box-number">
-                <span class="counter-number">18</span>k+
+                <span class="counter-number">20</span>+
               </h2>
-              <p class="box-text">SATISFIED CLIENTS</p>
+              <p class="box-text">PROJECTS DELIVERED</p>
             </div>
           </div>
           <div class="counter-card">
             <div class="media-body">
               <h2 class="box-number">
-                <span class="counter-number">2</span>k+
+                <span class="counter-number">2500</span>+
               </h2>
-              <p class="box-text">HAPPY OWNERS</p>
+              <p class="box-text">HAPPY FAMILIES</p>
             </div>
           </div>
         </div>
@@ -774,8 +774,10 @@ About Area
         <div class="row justify-content-between align-items-center">
           <div class="col-lg-6">
             <div class="title-area">
-              <span class="shadow-title">About</span>
-              <h2 class="sec-title text-white">About Us</h2>
+              <span class="shadow-title">Neo Vista</span>
+              <h2 class="sec-title text-white" style="visibility: hidden">
+                About Us
+              </h2>
 
               <p class="sec-text text-white" style="text-align: justify">
                 Neo Vista is a symbol of success and a benchmark of prestige
@@ -792,9 +794,8 @@ About Area
           </div>
           <div class="col-lg-auto">
             <div class="sec-btn">
-              <a href="about.html" class="th-btn btn-mask th-btn-icon"
-                >Learn More</a
-              >
+              <!-- <a href="about.html" class="th-btn btn-mask th-btn-icon"
+                >Learn More</a -->
             </div>
           </div>
         </div>
@@ -1106,13 +1107,13 @@ Property Area
           <div class="property-card">
             <div class="property-card-number">01</div>
             <div class="property-card-details">
-              <span class="property-card-subtitle">valet parking</span>
+              <span class="property-card-subtitle">Valet Parking</span>
               <h4 class="property-card-title">
                 <a href="#">Because Time is Prestige </a>
               </h4>
               <p class="property-card-text">
                 NeoVista is the first commercial project in Vapi to offer valet
-                service — for both business and healthcare users, catering to
+                service for both business and healthcare users, catering to
                 Vapi's VIP community.
               </p>
               <div class="property-card-price-meta"></div>
@@ -1134,12 +1135,12 @@ Property Area
           <div class="property-card">
             <div class="property-card-number">02</div>
             <div class="property-card-details">
-              <span class="property-card-subtitle">Entry</span>
+              <span class="property-card-subtitle">Drop Off</span>
               <h4 class="property-card-title">
                 <a href="#">Flow, Function & First-Class Access </a>
               </h4>
               <p class="property-card-text">
-                Thoughtful drop-off points ensure seamless navigation for office
+                Thoughtful drop off points ensure seamless navigation for office
                 users, visitors, and patients.
               </p>
             </div>
@@ -1160,7 +1161,7 @@ Property Area
           <div class="property-card">
             <div class="property-card-number">03</div>
             <div class="property-card-details">
-              <span class="property-card-subtitle">Waiting Lobby</span>
+              <span class="property-card-subtitle">Double Heighted Foyer</span>
               <h4 class="property-card-title">
                 <a href="#">First Impressions, The Royal One! </a>
               </h4>
@@ -1191,7 +1192,7 @@ Property Area
                 <a href="#">A State-Of-The-Art Lobby </a>
               </h4>
               <p class="property-card-text">
-                with expansive ten-foot-long gallery displays designed to
+                with expansive ten foot long gallery displays designed to
                 captivate, inspire, and elevate every impression.
               </p>
             </div>
@@ -1532,7 +1533,11 @@ Video Area
       <div class="video-area-1">
         <div class="video-wrap1">
           <div class="video-box1">
-            <img src="assets/img/hero/inside-image.webp" alt="img" />
+            <img
+              src="assets/img/custom-icons/images/neo-banner.webp"
+              alt="img"
+              style="border-radius: 10px"
+            />
             <!-- <a
               href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"
               class="play-btn style3 popup-video"
@@ -1541,19 +1546,21 @@ Video Area
           </div>
           <div class="video-wrap-details">
             <div class="title-area mb-45">
-              <h2 class="sec-title">Where Visionaries Belong</h2>
+              <h2 class="sec-title">NeoVista is a Symbol of Success</h2>
               <p class="sec-text text-title">
-                Every great empire has an iconic address, and for business
-                leaders, that address is VVIP. Designed for visionaries,
-                top-tier entrepreneurs, and corporate giants, this ultra-premium
-                business landmark stands as a testament to commercial
-                excellence, influence, and affluence.
+                A visionary twin tower marvel, it redefines the city's business
+                landscape with an unmistakable aura of luxury. Strategically
+                located in the heart of Vapi, it rises with purpose, offering a
+                seamless blend of architectural excellence, thoughtful planning,
+                and elite amenities. From grand valet arrivals and gallery
+                inspired foyers to designer offices and a dedicated hospital
+                tower, every detail is curated for those who demand more.
               </p>
             </div>
             <div class="btn-wrap mb-55">
-              <a href="#contact-sec" class="th-btn style2 btn-mask th-btn-icon"
+              <!-- <a href="#contact-sec" class="th-btn style2 btn-mask th-btn-icon"
                 >Request A Visit</a
-              >
+              > -->
             </div>
             <div class="author-grid">
               <div class="author-profile">
@@ -1623,7 +1630,7 @@ Contact Area
                   <h6 class="about-contact-details-title">Our Address</h6>
 
                   <p class="about-contact-details-text">
-                    Silvassa Vapi Rd, Imran Nagar, Daman, Vapi, Gujarat 396191
+                    Silvassa Vapi Rd,char rasta, Daman, Vapi, Gujarat 396191
                   </p>
                 </div>
               </div>
@@ -1744,7 +1751,7 @@ Contact Area
         <div class="location-map contact-sec-map z-index-common">
           <div class="contact-map">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3730.339969536903!2d72.9189383!3d20.36873891481282!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjDCsDIyJzA3LjUiTiA3MsKwNTUnMDguMiJF!5e0!3m2!1sen!2sin!4v1712160000000"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4534.513912030461!2d72.91672785523166!3d20.3687889419132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be0cf16b18c0ac3%3A0xee1fdc02320b054e!2sNeoVista!5e0!3m2!1sen!2sin!4v1747652827706!5m2!1sen!2sin"
               width="600"
               height="450"
               style="border: 0"
@@ -1813,7 +1820,7 @@ Contact Area
                         <img src="assets/img/icon/location-dot.svg" alt="img" />
                       </div>
                       <div class="details">
-                        <p>location</p>
+                        <!-- <p>location</p> -->
                         <p>
                           Silvassa Vapi Rd, Imran Nagar, Daman, Vapi, Gujarat
                           396191
@@ -1825,7 +1832,7 @@ Contact Area
                         <img src="assets/img/icon/phone.svg" alt="img" />
                       </div>
                       <div class="details">
-                        <p>Phone</p>
+                        <!-- <p>Phone</p> -->
                         <p>
                           <a href="tel:+91 90813 37700" class="info-box_link"
                             >+91 90813 37700</a
@@ -1838,7 +1845,7 @@ Contact Area
                         <img src="assets/img/icon/envelope.svg" alt="img" />
                       </div>
                       <div class="details">
-                        <p>Mail</p>
+                        <!-- <p>Mail</p> -->
                         <p>
                           <a href="mailto:mail@VVIP.com" class="info-box_link"
                             >mail@VVIP.com</a
@@ -1866,9 +1873,9 @@ Contact Area
                 </div>
               </div>
               <div class="newsletter-wrap">
-                <h5 class="newsletter-title">
+                <!-- <h5 class="newsletter-title">
                   Newsletter To Get Updated The Latest News
-                </h5>
+                </h5> -->
               </div>
             </div>
           </div>
@@ -1885,9 +1892,9 @@ Contact Area
                 <div class="col-lg-6 text-center text-lg-end">
                   <div class="footer-links">
                     <ul>
-                      <li><a href="#">Terms of service</a></li>
+                      <!-- <li><a href="#">Terms of service</a></li>
                       <li><a href="#">Privacy policy</a></li>
-                      <li><a href="#">Cookies</a></li>
+                      <li><a href="#">Cookies</a></li> -->
                     </ul>
                   </div>
                 </div>
