--- a/index.html
+++ b/index.html
@@ -335,8 +335,11 @@
               <div class="details">
                 <!-- <p>Phone</p> -->
                 <p>
-                  <a href="tel:+91 90813 37700" class="info-box_link"
-                    >+91 90813 37700</a
+                  <a
+                    href="tel:+91 9687664422"
+                    class="info-box_link"
+                    style="margin-top: 10px"
+                    >+91 9687664422</a
                   >
                 </p>
               </div>
@@ -348,7 +351,10 @@
               <div class="details">
                 <!-- <p>Mail</p> -->
                 <p>
-                  <a href="Mail@vapisvip.com" class="info-box_link"
+                  <a
+                    href="Mail@vapisvip.com"
+                    class="info-box_link"
+                    style="margin-top: 10px"
                     >Mail@vapisvip.com</a
                   >
                 </p>
@@ -775,9 +781,7 @@ About Area
           <div class="col-lg-6">
             <div class="title-area">
               <span class="shadow-title">Neo Vista</span>
-              <h2 class="sec-title text-white" style="visibility: hidden">
-                About Us
-              </h2>
+              <h2 class="sec-title text-white">Neo Vista</h2>
 
               <p class="sec-text text-white" style="text-align: justify">
                 Neo Vista is a symbol of success and a benchmark of prestige
@@ -1627,7 +1631,7 @@ Contact Area
                   <i class="fal fa-location-dot"></i>
                 </div>
                 <div class="about-contact-details">
-                  <h6 class="about-contact-details-title">Our Address</h6>
+                  <!-- <h6 class="about-contact-details-title">Our Address</h6> -->
 
                   <p class="about-contact-details-text">
                     Silvassa Vapi Rd,char rasta, Daman, Vapi, Gujarat 396191
@@ -1641,9 +1645,14 @@ Contact Area
                   <i class="fal fa-phone"></i>
                 </div>
                 <div class="about-contact-details">
-                  <h6 class="about-contact-details-title">Phone Number</h6>
+                  <h6
+                    class="about-contact-details-title"
+                    style="visibility: hidden"
+                  >
+                    Phone Number
+                  </h6>
                   <p class="about-contact-details-text">
-                    <a href="tel:+91 90813 37700">+91 90813 37700</a>
+                    <a href="tel:+91 9687664422">+91 9687664422</a>
                   </p>
                 </div>
               </div>
@@ -1654,7 +1663,12 @@ Contact Area
                   <i class="fal fa-envelope"></i>
                 </div>
                 <div class="about-contact-details">
-                  <h6 class="about-contact-details-title">Email Address</h6>
+                  <h6
+                    class="about-contact-details-title"
+                    style="visibility: hidden"
+                  >
+                    Email Address
+                  </h6>
                   <p class="about-contact-details-text">
                     <a href="mailto:mail@vapisvip.com">mail@vapisvip.com</a>
                   </p>
@@ -1834,8 +1848,11 @@ Contact Area
                       <div class="details">
                         <!-- <p>Phone</p> -->
                         <p>
-                          <a href="tel:+91 90813 37700" class="info-box_link"
-                            >+91 90813 37700</a
+                          <a
+                            href="tel:+91 9687664422"
+                            class="info-box_link"
+                            style="margin-top: 10px"
+                            >+91 9687664422</a
                           >
                         </p>
                       </div>
@@ -1847,7 +1864,10 @@ Contact Area
                       <div class="details">
                         <!-- <p>Mail</p> -->
                         <p>
-                          <a href="mailto:mail@VVIP.com" class="info-box_link"
+                          <a
+                            href="mailto:mail@VVIP.com"
+                            class="info-box_link"
+                            style="margin-top: 10px"
                             >mail@VVIP.com</a
                           >
                         </p>
@@ -1886,7 +1906,8 @@ Contact Area
                 <div class="col-lg-6">
                   <p class="copyright-text">
                     Copyright <i class="fal fa-copyright"></i> 2025
-                    <a href="#">VVIP</a>, All rights reserved.
+                    <a href="#">VapisVIP</a>, All rights reserved By
+                    itsmedigital.in
                   </p>
                 </div>
                 <div class="col-lg-6 text-center text-lg-end">
