changes in meta tag and blog-details

--- a/blog-details.html
+++ b/blog-details.html
@@ -461,12 +461,15 @@
                 <p class="blog-text mt-25">
                   ‍Experience That Matters: With 26 years in the game, we know
                   what works and what doesn’t. That means fewer surprises for
-                  our clients. Purpose Driven Design: Every square foot is
-                  planned with usability and long term maintenance in mind. Well
-                  Considered Locations: We choose our sites carefully balancing
-                  accessibility with long term value. Straightforward Service:
-                  Our team is easy to reach, and even easier to work with. We
-                  don’t overpromise we deliver. Let’s Grow, Together
+                  our clients.<br />
+                  <span>1.</span>
+                  Purpose Driven Design: Every square foot is planned with
+                  usability and long term maintenance in mind.<br />
+                  <span>2.</span> Well Considered Locations: We choose our sites
+                  carefully balancing accessibility with long term value.<br />
+                  <span>3.</span> Straightforward Service: Our team is easy to
+                  reach, and even easier to work with. We don’t overpromise we
+                  deliver. Let’s Grow, Together
                 </p>
                 <div class="blog-img mb-40">
                   <img src="assets/img/blog/1st blog-01.webp" alt="img" />
