added lazy loading in aminities image

--- a/index.html
+++ b/index.html
@@ -1231,6 +1231,7 @@ Property Area
                   <img
                     src="assets/img/aminities/website photos-10.webp"
                     alt="aminities image"
+                    loading="lazy"
                   />
                 </div>
                 <div class="aminities-content">
@@ -1255,6 +1256,7 @@ Property Area
                   <img
                     src="assets/img/custom-icons/images/shallow-focus-shot-two-males-walking-along-bright-corridor.jpg"
                     alt="aminities image"
+                    loading="lazy"
                   />
                 </div>
                 <div class="aminities-content">
@@ -1279,6 +1281,7 @@ Property Area
                   <img
                     src="assets/img/aminities/website photos-04.webp"
                     alt="aminities image"
+                    loading="lazy"
                   />
                 </div>
                 <div class="aminities-content">
@@ -1303,6 +1306,7 @@ Property Area
                   <img
                     src="assets/img/aminities/website photos-02.webp"
                     alt="aminities image"
+                    loading="lazy"
                   />
                 </div>
                 <div class="aminities-content">
@@ -1327,6 +1331,7 @@ Property Area
                   <img
                     src="assets/img/custom-icons/images/steptodown.com319552.jpg"
                     alt="aminities image"
+                    loading="lazy"
                   />
                 </div>
                 <div class="aminities-content">
@@ -1351,6 +1356,7 @@ Property Area
                   <img
                     src="assets/img/aminities/website photos-01.webp"
                     alt="aminities image"
+                    loading="lazy"
                   />
                 </div>
                 <div class="aminities-content">
@@ -1375,6 +1381,7 @@ Property Area
                   <img
                     src="assets/img/aminities/website photos-05.webp"
                     alt="aminities image"
+                    loading="lazy"
                   />
                 </div>
                 <div class="aminities-content">
@@ -1399,6 +1406,7 @@ Property Area
                   <img
                     src="assets/img/aminities/website photos-03.webp"
                     alt="aminities image"
+                    loading="lazy"
                   />
                 </div>
                 <div class="aminities-content">
@@ -1446,6 +1454,7 @@ Property Area
                   <img
                     src="assets/img/aminities/website photos-07.webp"
                     alt="aminities image"
+                    loading="lazy"
                   />
                 </div>
                 <div class="aminities-content">
@@ -1470,6 +1479,7 @@ Property Area
                   <img
                     src="assets/img/aminities/website photos-08.webp"
                     alt="aminities image"
+                    loading="lazy"
                   />
                 </div>
                 <div class="aminities-content">
@@ -1494,6 +1504,7 @@ Property Area
                   <img
                     src="assets/img/aminities/website photos-11.webp"
                     alt="aminities image"
+                    loading="lazy"
                   />
                 </div>
                 <div class="aminities-content">
@@ -1595,6 +1606,7 @@ Blog Area
                   ><img
                     src="assets/img/blog/1st blog_2-01.webp"
                     alt="Blog Image"
+                    loading="lazy"
                 /></a>
               </div>
               <div class="blog-content">
