changes in banner and mail.php and blogdetails

--- a/index.html
+++ b/index.html
@@ -2179,7 +2179,7 @@ Contact Area
                       /></a>
                     </div>
                     <p class="about-text">
-                      As a Vapi VIP, you’re not just securing a space, you’re
+                      As a Vapi's VIP, you’re not just securing a space, you’re
                       unlocking a world of distinction, strategic advantage, and
                       premium amenities designed for high performing businesses
                     </p>
