addedoptions in the form

--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@
                     <option value="Real Estate">Real Estate</option>
                     <option value="Apartment">Apartment</option>
                     <option value="Residencial">Residencial</option>
+                    <option value="Showrooms">Showrooms</option>
+                    <option value="Offices">Offices</option>
                     <option value="Deluxe">Deluxe</option>
                   </select>
                   <i class="fal fa-angle-down"></i>
@@ -2114,6 +2116,8 @@ Contact Area
                         <option value="Real Estate">Real Estate</option>
                         <option value="Apartment">Apartment</option>
                         <option value="Residencial">Residencial</option>
+                        <option value="Showrooms">Showrooms</option>
+                        <option value="Offices">Offices</option>
                         <option value="Deluxe">Deluxe</option>
                       </select>
                       <i class="fal fa-angle-down"></i>
