--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Commercial Real Estate Insights | VVIP Properties Blog</title>
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <meta name="author" content="VVIP Properties" />
     <meta
@@ -131,6 +131,91 @@
       media="print"
       onload="this.media='all'"
     />
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        overflow-x: hidden;
+      }
+
+      .carousel-container {
+        width: 100vw;
+        height: auto;
+        position: relative;
+        overflow: hidden;
+      }
+
+      .carousel {
+        display: flex;
+        transition: transform 0.5s ease-in-out;
+        width: 100%;
+      }
+
+      .carousel img {
+        width: 100vw;
+        height: auto;
+        object-fit: cover;
+        object-position: center;
+        aspect-ratio: 16 / 9;
+        flex-shrink: 0;
+      }
+
+      .carousel-dots {
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        gap: 10px;
+      }
+
+      .dot {
+        width: 12px;
+        height: 12px;
+        background-color: #bbb;
+        border-radius: 50%;
+        cursor: pointer;
+        transition: background-color 0.3s;
+      }
+
+      .dot.active {
+        background-color: #333;
+      }
+
+      /* Responsive adjustments */
+      @media (max-width: 768px) {
+        .carousel img {
+          aspect-ratio: 3 / 2;
+          margin-top: 100px;
+        }
+
+        .dot {
+          width: 10px;
+          height: 10px;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .carousel img {
+          aspect-ratio: 3 / 2;
+          margin-top: 100px;
+        }
+
+        .carousel-dots {
+          bottom: 8px;
+          gap: 8px;
+        }
+
+        .dot {
+          width: 8px;
+          height: 8px;
+        }
+      }
+    </style>
   </head>
 
   <body class="bg-smoke">
@@ -448,282 +533,16 @@
     <!--==============================
 Hero Area
 ==============================-->
-    <div
-      class="hero-1"
-      id="hero"
-      style="
-        padding-top: 120px;
-        position: relative;
-        min-height: 100vh;
-        overflow: hidden;
-      "
-    >
-      <div
-        class="swiper th-slider hero-slider1"
-        id="heroSlide1"
-        data-slider-options='{"effect":"fade", "autoHeight": "true"}'
-        style="
-          height: auto;
-          min-height: 100vh;
-          margin-top: -165px;
-          transform: translate(0, 165px);
-        "
-      >
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <div
-              class="hero-inner"
-              data-mask-src="assets/img/hero/hero_1_bg_mask.png"
-              style="
-                position: relative;
-                height: 100%;
-                min-height: 100vh;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-              "
-            >
-              <div
-                class="th-hero-bg"
-                data-bg-src="assets/img/hero/Banner-01.webp"
-                style="
-                  position: absolute;
-                  top: 0;
-                  left: 0;
-                  width: 100%;
-                  height: 100%;
-                  background-size: cover;
-                  background-position: center center;
-                  background-repeat: no-repeat;
-                  z-index: -1;
-                "
-              ></div>
-              <div
-                class="hero-big-text"
-                style="
-                  position: absolute;
-                  bottom: -30px;
-                  font-size: 15vw;
-                  font-family: var(--title-font);
-                  font-weight: 500;
-                  line-height: 1;
-                  -webkit-text-fill-color: transparent;
-                  -webkit-text-stroke: 1px var(--white-color);
-                  opacity: 0.2;
-                  z-index: 1;
-                "
-              >
-                VVIP
-              </div>
-              <div
-                class="container"
-                style="
-                  position: relative;
-                  z-index: 2;
-                  padding-top: 100px;
-                  padding-bottom: 100px;
-                "
-              >
-                <div class="row align-items-center">
-                  <div class="col-lg-8">
-                    <div class="hero-style1">
-                      <h1 class="hero-title text-white">
-                        <span
-                          class="title1"
-                          data-ani="slideindown"
-                          data-ani-delay="0.3s"
-                          style="visibility: hidden"
-                        >
-                          A Masterpiece of
-                        </span>
-                        <span
-                          class="title2"
-                          data-ani="slideindown"
-                          data-ani-delay="0.4s"
-                          style="visibility: hidden"
-                        >
-                          Business Luxury
-                        </span>
-                      </h1>
-                      <p
-                        class="hero-text text-white"
-                        data-ani="slideinup"
-                        data-ani-delay="0.5s"
-                        style="visibility: hidden"
-                      >
-                        A space where business meets grandeur, where every
-                        detail is curated for excellence, and where only the
-                        elite belong. VVIP isn’t just a commercial project; it’s
-                        a statement of prestige, an address of power, and an
-                        icon of success
-                      </p>
-                    </div>
-                  </div>
-                  <div class="col-lg-4">
-                    <div
-                      class="hero-video-wrap text-center"
-                      data-ani="slideinright"
-                      data-ani-delay="0.4s"
-                    >
-                      <!-- <a
-                        href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"
-                        class="play-btn style2 popup-video"
-                        ><i class="fa-sharp fa-solid fa-play"></i
-                      ></a> -->
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div
-              class="hero-inner"
-              data-mask-src="assets/img/hero/hero_1_bg_mask.png"
-            >
-              <div
-                class="th-hero-bg"
-                data-bg-src="assets/img/hero/Banner-02.webp"
-              ></div>
-              <div class="hero-big-text">VVIP</div>
-              <div class="container">
-                <div class="row align-items-center">
-                  <div class="col-lg-8">
-                    <div class="hero-style1">
-                      <h1 class="hero-title text-white">
-                        <span
-                          class="title1"
-                          data-ani="slideindown"
-                          data-ani-delay="0.3s"
-                          style="visibility: hidden"
-                        >
-                          Where Visionaries Belong
-                        </span>
-                      </h1>
-                      <p
-                        class="hero-text text-white"
-                        data-ani="slideinup"
-                        data-ani-delay="0.5s"
-                        style="visibility: hidden"
-                      >
-                        Every great empire has an address, and for business
-                        leaders, that address is VVIP. Designed for visionaries,
-                        industry leaders, and elite entrepreneurs, this
-                        ultra-premium business destination redefines commercial
-                        excellence with: ✔ World-Class Architecture – A symbol
-                        of timeless sophistication ✔ Elite Business Spaces –
-                        Crafted for high-powered success ✔ Unparalleled Luxury –
-                        From grand lobbies to concierge services ✔ Exclusive
-                        Networking – A league of business magnates
-                      </p>
-                    </div>
-                  </div>
-                  <div class="col-lg-4">
-                    <div
-                      class="hero-video-wrap text-center"
-                      data-ani="slideinright"
-                      data-ani-delay="0.4s"
-                    >
-                      <!-- <a
-                        href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"
-                        class="play-btn style2 popup-video"
-                        ><i class="fa-sharp fa-solid fa-play"></i
-                      ></a> -->
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div
-              class="hero-inner"
-              data-mask-src="assets/img/hero/hero_1_bg_mask.png"
-            >
-              <div
-                class="th-hero-bg"
-                data-bg-src="assets/img/hero/Banner-03.webp"
-                style="background-position: left center !important"
-              ></div>
-              <div class="hero-big-text">VVIP</div>
-              <div class="container">
-                <div class="row align-items-center">
-                  <div class="col-lg-8">
-                    <div class="hero-style1">
-                      <h1 class="hero-title text-white">
-                        <span
-                          class="title1"
-                          data-ani="slideindown"
-                          data-ani-delay="0.3s"
-                          style="visibility: hidden"
-                        >
-                          The Pinnacle of
-                        </span>
-                        <span
-                          class="title2"
-                          data-ani="slideindown"
-                          data-ani-delay="0.4s"
-                          style="visibility: hidden"
-                        >
-                          Business Prestige</span
-                        >
-                      </h1>
-                      <p
-                        class="hero-text text-white"
-                        data-ani="slideinup"
-                        data-ani-delay="0.5s"
-                        style="visibility: hidden"
-                      >
-                        More than just a workspace, VVIP offers an environment
-                        of opulence, ensuring that every meeting, every deal,
-                        and every interaction happens in an atmosphere of
-                        grandeur. Ultra-Premium Office & Retail Spaces 5-Star
-                        Business Amenities & Concierge Services Grand Drop-Off
-                        Foyer & Valet Parking Exclusive Lounge & VIP Business
-                        Zones
-                      </p>
-                    </div>
-                  </div>
-                  <div class="col-lg-4">
-                    <div
-                      class="hero-video-wrap text-center"
-                      data-ani="slideinright"
-                      data-ani-delay="0.4s"
-                    >
-                      <!-- <a
-                        href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"
-                        class="play-btn style2 popup-video"
-                        ><i class="fa-sharp fa-solid fa-play"></i
-                      ></a> -->
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="slider-pagination"></div>
+    <div class="carousel-container">
+      <div class="carousel">
+        <img src="assets/img/hero/Banner-01.webp" alt="Banner 1" />
+        <img src="assets/img/hero/Banner-02.webp" alt="Banner 2" />
+        <img src="assets/img/hero/Banner-03.webp" alt="Banner 3" />
       </div>
-      <div class="hero-social-link">
-        <div class="social-wrap">
-          <a
-            href="https://www.facebook.com/profile.php?id=61576362355214"
-            target="_blank"
-            >FACEBOOK</a
-          >
-          <a href="https://www.instagram.com/odhavdevelopers/" target="_blank"
-            >INSTAGRAM</a
-          >
-          <a
-            href="https://www.linkedin.com/in/vapis-vip-b45792365?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
-            >LINKED IN</a
-          >
-        </div>
-      </div>
-      <div class="scroll-down">
-        <a href="#about-sec" class="hero-scroll-wrap"
-          ><i class="fal fa-long-arrow-left"></i>Scroll</a
-        >
+      <div class="carousel-dots">
+        <span class="dot active" data-index="0"></span>
+        <span class="dot" data-index="1"></span>
+        <span class="dot" data-index="2"></span>
       </div>
     </div>
     <!--======== / Hero Section ========-->
@@ -2340,68 +2159,6 @@ Contact Area
       </svg>
     </div>
 
-    <style>
-      @media (max-width: 991px) {
-        .hero-1 {
-          padding-top: 110px !important;
-          min-height: auto !important;
-          padding-bottom: 0 !important;
-        }
-
-        .hero-slider1 {
-          margin-left: 15px !important;
-          margin-right: 15px !important;
-          min-height: 80vh !important;
-          transform: none !important;
-          margin-top: 0 !important;
-        }
-
-        .hero-style1 {
-          padding: 80px 20px 60px !important;
-        }
-
-        .hero-title {
-          font-size: 2rem !important;
-          margin-bottom: 15px !important;
-        }
-
-        .hero-text {
-          font-size: 14px !important;
-          margin-bottom: 30px !important;
-        }
-      }
-
-      @media (max-width: 767px) {
-        .hero-slider1 {
-          min-height: 70vh !important;
-        }
-
-        .th-hero-bg {
-          background-position: 92% center !important;
-        }
-
-        .hero-big-text {
-          font-size: 100px !important;
-          bottom: -20px !important;
-        }
-      }
-
-      @media (max-width: 575px) {
-        .hero-slider1 {
-          min-height: 60vh !important;
-          margin-left: 10px !important;
-          margin-right: 10px !important;
-        }
-
-        .hero-style1 {
-          padding: 60px 0 40px !important;
-        }
-
-        .hero-title {
-          font-size: 1.8rem !important;
-        }
-      }
-    </style>
     <!--==============================
     All Js File
 ============================== -->
@@ -2528,6 +2285,44 @@ Contact Area
             sessionStorage.setItem("formSubmitted", "true");
           });
         }
+      });
+    </script>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const carousel = document.querySelector(".carousel");
+        const dots = document.querySelectorAll(".dot");
+        let currentIndex = 0;
+        let autoSlideInterval;
+
+        function updateCarousel(index) {
+          carousel.style.transform = `translateX(-${index * 100}%)`;
+          dots.forEach((dot) => dot.classList.remove("active"));
+          dots[index].classList.add("active");
+          currentIndex = index;
+        }
+
+        function startAutoSlide() {
+          autoSlideInterval = setInterval(() => {
+            currentIndex = (currentIndex + 1) % dots.length; // Loop back to 0 after last slide
+            updateCarousel(currentIndex);
+          }, 3000); // 4 seconds
+        }
+
+        function resetAutoSlide() {
+          clearInterval(autoSlideInterval); // Clear existing interval
+          startAutoSlide(); // Restart the interval
+        }
+
+        dots.forEach((dot) => {
+          dot.addEventListener("click", () => {
+            const index = parseInt(dot.dataset.index);
+            updateCarousel(index);
+            resetAutoSlide(); // Reset timer on manual click
+          });
+        });
+
+        // Start the auto-slide on page load
+        startAutoSlide();
       });
     </script>
   </body>
