fix layout shifting image and changed htaccess code

--- a/index.html
+++ b/index.html
@@ -817,6 +817,8 @@ Portfolio Area
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
+        min-height: 100vh;
+        overflow: hidden;
       "
       data-opacity="5"
       data-overlay="title"
