change in the image which was flikering on scroll

--- a/index.html
+++ b/index.html
@@ -810,6 +810,7 @@ Service Area
     <!--==============================
 Portfolio Area  
 ==============================-->
+
     <section
       class="project-area-1 space overflow-hidden"
       style="
@@ -817,8 +818,8 @@ Portfolio Area
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
-        min-height: 100vh;
-        overflow: hidden;
+        min-height: 100svh;
+        width: 100%;
       "
       data-opacity="5"
       data-overlay="title"
