--- a/index.html
+++ b/index.html
@@ -1557,6 +1557,7 @@ Contact Area
                         name="name"
                         id="name"
                         placeholder="Your Name*"
+                        required
                       />
                       <i class="fal fa-user"></i>
                     </div>
@@ -1567,6 +1568,7 @@ Contact Area
                         name="email"
                         id="email"
                         placeholder="Your Email*"
+                        required
                       />
                       <i class="fal fa-envelope"></i>
                     </div>
@@ -1591,6 +1593,7 @@ Contact Area
                         class="form-control"
                         name="message"
                         id="message"
+                        required
                       ></textarea>
                     </div>
                     <div class="col-12 form-btn mt-4">
