--- a/index.html
+++ b/index.html
@@ -1836,22 +1836,22 @@ Contact Area
 
     <!-- Modal Script with SEO considerations -->
     <script>
-      document.addEventListener("DOMContentLoaded", function () {
+      document.addEventListener("DOMContentLoaded", () => {
+        /** ---------------- MODAL FUNCTIONALITY ---------------- */
         const modal = document.getElementById("contactModal");
         const closeBtn = document.querySelector(".modal-close");
+        const contactForm = document.querySelector(".appointment-form");
+        const firstNameInput = document.getElementById("modal-name");
+
         let modalTimer;
-        let formSubmitted = false;
+        let formSubmitted = sessionStorage.getItem("formSubmitted") === "true";
         let initialTimerStarted = false;
 
-        // Show modal function with improved behavior
         function showModal() {
-          if (!formSubmitted && !modal.classList.contains("active")) {
+          if (!formSubmitted && modal && !modal.classList.contains("active")) {
             modal.classList.add("active");
-            document.body.style.overflow = "hidden";
-            document.documentElement.style.overflow = "hidden";
+            document.body.classList.add("no-scroll");
 
-            // Set focus on first input and ensure it's accessible
-            const firstNameInput = document.getElementById("modal-name");
             if (firstNameInput) {
               setTimeout(
                 () => firstNameInput.focus({ preventScroll: true }),
@@ -1859,134 +1859,121 @@ Contact Area
               );
             }
 
-            // Reset timer when modal is shown
             resetModalTimer();
           }
         }
 
-        // Close modal function with improved behavior
         function closeModal() {
-          modal.classList.remove("active");
-          document.body.style.overflow = "";
-          document.documentElement.style.overflow = "";
+          if (modal) {
+            modal.classList.remove("active");
+            document.body.classList.remove("no-scroll");
 
-          // Reset the timer when user closes manually
-          if (!initialTimerStarted) {
-            startInitialTimer();
+            if (!initialTimerStarted) {
+              startInitialTimer();
+            }
           }
         }
 
-        // Reset the 60-second timer
         function resetModalTimer() {
           clearTimeout(modalTimer);
-          modalTimer = setTimeout(showModal, 60000); // 60 seconds
+          modalTimer = setTimeout(showModal, 30000); // 30 seconds
         }
 
-        // Start the initial 4-second timer
         function startInitialTimer() {
           initialTimerStarted = true;
-          setTimeout(showModal, 4000);
+          setTimeout(showModal, 4000); // 4 seconds
         }
 
-        // Event listeners with improved handling
-        closeBtn.addEventListener("click", closeModal);
+        if (!formSubmitted) {
+          startInitialTimer();
+        }
 
-        // Close when clicking outside modal (improved detection)
-        modal.addEventListener("click", function (e) {
+        if (closeBtn) {
+          closeBtn.addEventListener("click", closeModal);
+        }
+
+        if (modal) {
+          modal.addEventListener("click", (e) => {
+            if (
+              e.target === modal ||
+              e.target.classList.contains("modal-overlay")
+            ) {
+              closeModal();
+            }
+          });
+
+          const modalContent = modal.querySelector(".modal-content");
+          if (modalContent) {
+            modalContent.addEventListener("click", (e) => e.stopPropagation());
+          }
+        }
+
+        document.addEventListener("keydown", (e) => {
           if (
-            e.target === modal ||
-            e.target.classList.contains("modal-overlay")
+            e.key === "Escape" &&
+            modal &&
+            modal.classList.contains("active")
           ) {
             closeModal();
           }
         });
 
-        // Close with Escape key
-        document.addEventListener("keydown", function (e) {
-          if (e.key === "Escape" && modal.classList.contains("active")) {
-            closeModal();
-          }
-        });
-
-        // Prevent modal from closing when clicking inside content
-        document
-          .querySelector(".modal-content")
-          .addEventListener("click", function (e) {
-            e.stopPropagation();
-          });
-
-        // Check form submission status
-        if (sessionStorage.getItem("formSubmitted")) {
-          formSubmitted = true;
-        } else {
-          // Start the initial timer only if form hasn't been submitted
-          startInitialTimer();
-        }
-
-        // Optional: Track form submission
-        const contactForm = document.querySelector(".appointment-form");
         if (contactForm) {
-          contactForm.addEventListener("submit", function () {
+          contactForm.addEventListener("submit", () => {
             formSubmitted = true;
             sessionStorage.setItem("formSubmitted", "true");
           });
         }
-      });
-    </script>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
+
+        /** ---------------- CAROUSEL FUNCTIONALITY ---------------- */
         const carousel = document.querySelector(".carousel");
         const dots = document.querySelectorAll(".dot");
         let currentIndex = 0;
         let autoSlideInterval;
 
         function updateCarousel(index) {
-          carousel.style.transform = `translateX(-${index * 100}%)`;
-          dots.forEach((dot) => dot.classList.remove("active"));
-          dots[index].classList.add("active");
-          currentIndex = index;
+          if (carousel) {
+            carousel.style.transform = `translateX(-${index * 100}%)`;
+            dots.forEach((dot) => dot.classList.remove("active"));
+            if (dots[index]) dots[index].classList.add("active");
+            currentIndex = index;
+          }
         }
 
         function startAutoSlide() {
           autoSlideInterval = setInterval(() => {
-            currentIndex = (currentIndex + 1) % dots.length; // Loop back to 0 after last slide
+            currentIndex = (currentIndex + 1) % dots.length;
             updateCarousel(currentIndex);
-          }, 3000); // 4 seconds
+          }, 3000); // 3 seconds
         }
 
         function resetAutoSlide() {
-          clearInterval(autoSlideInterval); // Clear existing interval
-          startAutoSlide(); // Restart the interval
+          clearInterval(autoSlideInterval);
+          startAutoSlide();
         }
 
         dots.forEach((dot) => {
           dot.addEventListener("click", () => {
             const index = parseInt(dot.dataset.index);
             updateCarousel(index);
-            resetAutoSlide(); // Reset timer on manual click
+            resetAutoSlide();
           });
         });
 
-        // Start the auto-slide on page load
-        startAutoSlide();
-      });
-    </script>
-    <script>
-      // Function to hide the loader
-      function hideLoader() {
-        const loader = document.getElementById("loader");
-        loader.classList.add("hidden");
-      }
+        if (dots.length && carousel) {
+          startAutoSlide();
+        }
 
-      // Simulate loading (replace this with your actual loading logic)
-      window.addEventListener("load", () => {
-        setTimeout(() => {
-          hideLoader();
-        }, 3000); // Simulate 3 seconds of loading
+        /** ---------------- LOADER FUNCTIONALITY ---------------- */
+        window.addEventListener("load", () => {
+          const loader = document.getElementById("loader");
+          if (loader) {
+            setTimeout(() => {
+              loader.classList.add("hidden");
+            }, 3000); // 3 seconds
+          }
+        });
       });
-
-      // Example: Hide loader when a specific component is loaded
-      // You can call hideLoader() when your component or data is ready
     </script>
   </body>
 </html>
