added version in both js and css

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     />
     <link
       rel="stylesheet"
-      href="assets/css/style.css"
+      href="assets/css/style.css?v=1.1"
       media="print"
       onload="this.media='all'"
     />
@@ -1832,7 +1832,7 @@ Contact Area
     <script src="assets/js/panolens.min.js" defer></script>
 
     <!-- Main Js File with Modal Logic -->
-    <script src="assets/js/main.js" defer></script>
+    <script src="assets/js/main.js?v=1.1" defer></script>
 
     <!-- Modal Script with SEO considerations -->
     <script>
