added margin-top : 100px to .carousel img

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
         object-position: center;
         aspect-ratio: 16 / 9;
         flex-shrink: 0;
+        margin-top: 100px;
       }
 
       .carousel-dots {
