added security image changed modal added number field and fixed error messages

--- a/index.html
+++ b/index.html
@@ -365,6 +365,17 @@
                   />
                   <i class="fal fa-envelope"></i>
                 </div>
+                <div class="form-group style-border style-radius col-12">
+                  <input
+                    type="tel"
+                    class="form-control"
+                    name="phone"
+                    id="modal-phone"
+                    placeholder="Your Phone Number*"
+                    required
+                  />
+                  <i class="fal fa-phone"></i>
+                </div>
                 <div class="form-group style-border style-radius col-md-12">
                   <select
                     name="subject"
@@ -1172,7 +1183,7 @@ Property Area
               >
                 <div class="aminities-card-img">
                   <img
-                    src="assets/img/custom-icons/images/steptodown.com319552.jpg"
+                    src="assets/img/barrierimage.jpg"
                     alt="aminities image"
                     loading="lazy"
                   />
@@ -1572,6 +1583,17 @@ Contact Area
                         required
                       />
                       <i class="fal fa-envelope"></i>
+                    </div>
+                    <div class="form-group style-border style-radius col-12">
+                      <input
+                        type="tel"
+                        class="form-control"
+                        name="phone"
+                        id="modal-phone"
+                        placeholder="Your Phone Number*"
+                        required
+                      />
+                      <i class="fal fa-phone"></i>
                     </div>
                     <div class="form-group style-border style-radius col-md-12">
                       <select name="subject" id="subject" class="form-select">
