--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <meta
       name="keywords"
-      content="commercial real estate blog, Vapi property trends, business space advice, office leasing tips, retail location strategies, industrial property insights"
+      content="commercial real estate , Vapi property trends, business space advice, office leasing tips, retail location strategies, industrial property insights"
     />
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="7 days" />
@@ -80,13 +80,9 @@
     <meta http-equiv="Cache-Control" content="max-age=31536000, public" />
     <meta http-equiv="Expires" content="31536000" />
 
-    <!-- Preconnect and Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
     <!-- Non-critical CSS -->
     <link
@@ -211,9 +207,7 @@
           margin-top: -15px;
         }
       }
-    </style>
-    <style>
-      /* Center the loader and make it responsive */
+
       .loader-container {
         position: fixed;
         top: 0;
@@ -274,6 +268,7 @@
         font-family: Arial, sans-serif;
       }
     </style>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
 
   <body class="bg-smoke">
@@ -638,9 +633,6 @@
       </div>
     </header>
 
-    <!--==============================
-Hero Area
-==============================-->
     <div class="carousel-container">
       <div class="carousel">
         <img src="assets/img/hero/Banner-01.webp" alt="Banner 1" />
@@ -653,10 +645,7 @@ Hero Area
         <span class="dot" data-index="2"></span>
       </div>
     </div>
-    <!--======== / Hero Section ========-->
-    <!--==============================
-Counter Area  
-==============================-->
+
     <div class="counter-area-1 bg-smoke">
       <div class="container">
         <div class="counter-card-wrap space">
@@ -695,9 +684,7 @@ Counter Area
         </div>
       </div>
     </div>
-    <!--==============================
-About Area  
-==============================-->
+
     <div class="overflow-hidden space-top bg-theme" id="about-sec">
       <div class="container">
         <div class="row justify-content-between align-items-center">
@@ -770,9 +757,7 @@ About Area
         </div>
       </div>
     </div>
-    <!--==============================
-Service Area  
-==============================-->
+
     <section
       class="service-area-1 overflow-hidden space-bottom bg-theme pt-80"
       id="service-sec"
@@ -844,10 +829,6 @@ Service Area
         </div>
       </div>
     </section>
-
-    <!--==============================
-Portfolio Area  
-==============================-->
 
     <section
       class="project-area-1 space overflow-hidden"
@@ -966,9 +947,7 @@ Portfolio Area
         </div>
       </div>
     </section>
-    <!--==============================
-Property Area  
-==============================-->
+
     <section class="space bg-theme" id="property-sec">
       <div class="container">
         <div class="row justify-content-between align-items-center">
@@ -1078,9 +1057,7 @@ Property Area
         </div>
       </div>
     </section>
-    <!--==============================
-Property Area  
-==============================-->
+
     <section class="space overflow-hidden">
       <div class="container">
         <div class="row justify-content-center align-items-center">
@@ -1391,9 +1368,7 @@ Property Area
         </div>
       </div>
     </section>
-    <!--==============================
-Video Area  
-==============================-->
+
     <div class="container">
       <div class="video-area-1">
         <div class="video-wrap1">
@@ -1429,13 +1404,9 @@ Video Area
         </div>
       </div>
     </div>
-    <!--==============================
-Team Area  
-==============================-->
+
     <section class="team-area-1 space-bottom bg-theme" id="team-sec"></section>
-    <!--==============================
-Blog Area  
-==============================-->
+
     <section class="th-blog-wrapper space-top space-extra-bottom" id="blog-sec">
       <div class="container">
         <div class="row">
@@ -1476,11 +1447,49 @@ Blog Area
           </div>
         </div>
       </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-xxl-8 col-lg-7">
+            <div class="th-blog blog-single has-post-thumbnail">
+              <div class="blog-img">
+                <a href="blog-details-2.html" target="_blank"
+                  ><img
+                    src="assets/img/blog/1st blog_2-01.webp"
+                    alt="Blog Image"
+                    loading="lazy"
+                /></a>
+              </div>
+              <div class="blog-content">
+                <h2 class="blog-title">
+                  <a href="blog-details-2.html" target="_blank"
+                    >Vapi's Transformation: How ODHAV Developers are Shaping the
+                    Future of Char Rasta</a
+                  >
+                </h2>
+                <p class="blog-text">
+                  Char Rasta in Vapi is no longer just a junction, it’s fast
+                  becoming the heart of progress and opportunity. Once a modest
+                  stretch, it is now rising as a vibrant commercial and
+                  residential hotspot, driven by strategic location advantages,
+                  exceptional connectivity, and the vision of ODHAV Developers,
+                  who bring over 26 years of excellence to the table.
+                </p>
+                <a
+                  href="blog-details-2.html"
+                  target="_blank"
+                  class="th-btn style-border2 th-btn-icon"
+                  >Read More</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-xxl-4 col-lg-5">
+            <aside class="sidebar-area"></aside>
+          </div>
+        </div>
+      </div>
     </section>
-    <!-- Contact Area  -->
-    <!--==============================
-    Breadcumb
-============================== -->
+
     <section class="space-bottom bg-theme overflow-hidden" id="contact-sec1">
       <div
         class="breadcumb-wrapper"
@@ -1675,9 +1684,7 @@ Contact Area
         </div>
       </div>
     </section>
-    <!--==============================
-	Footer Area
-==============================-->
+
     <footer class="footer-wrapper footer-layout1 bg-theme">
       <div
         class="footer-wrap bg-smoke"
@@ -1830,10 +1837,6 @@ Contact Area
         </div>
       </div>
     </footer>
-
-    <!--********************************
-			Code End  Here 
-	******************************** -->
 
     <!-- Scroll To Top -->
     <div class="scroll-top">
