--- a/index.html
+++ b/index.html
@@ -80,9 +80,12 @@
     <meta http-equiv="Cache-Control" content="max-age=31536000, public" />
     <meta http-equiv="Expires" content="31536000" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Shadows+Into+Light&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Non-critical CSS -->
     <link
@@ -1408,6 +1411,10 @@
     <section class="team-area-1 space-bottom bg-theme" id="team-sec"></section>
 
     <section class="th-blog-wrapper space-top space-extra-bottom" id="blog-sec">
+      <div class="title-area text-center">
+        <span class="shadow-title style2">Blogs</span>
+        <h2 class="sec-title">Blogs</h2>
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-xxl-8 col-lg-7">
