chnages in index.html added main.js minify

--- a/index.html
+++ b/index.html
@@ -638,9 +638,21 @@
 
     <div class="carousel-container">
       <div class="carousel">
-        <img src="assets/img/hero/Banner-01.webp" alt="Banner 1" />
-        <img src="assets/img/hero/Banner-02.webp" alt="Banner 2" />
-        <img src="assets/img/hero/Banner-03.webp" alt="Banner 3" />
+        <img
+          src="assets/img/hero/Banner-01.webp"
+          alt="Banner 1"
+          loading="lazy"
+        />
+        <img
+          src="assets/img/hero/Banner-02.webp"
+          alt="Banner 2"
+          loading="lazy"
+        />
+        <img
+          src="assets/img/hero/Banner-03.webp"
+          alt="Banner 3"
+          loading="lazy"
+        />
       </div>
       <div class="carousel-dots">
         <span class="dot active" data-index="0"></span>
@@ -1877,7 +1889,7 @@ Contact Area
     <!-- Counter Up -->
     <script src="assets/js/jquery.counterup.min.js" defer></script>
 
-    <script src="assets/js/main.js?v=1.2" defer></script>
+    <script src="assets/js/main.min.js" defer></script>
 
     <script>
       document.addEventListener("DOMContentLoaded", () => {
