--- a/blog-details-2.html
+++ b/blog-details-2.html
@@ -130,6 +130,61 @@
       media="print"
       onload="this.media='all'"
     />
+
+    <style>
+      .loader-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #1a1a1a;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+        transition: opacity 0.5s ease;
+      }
+
+      /* Hide loader when loading is complete */
+      .loader-container.hidden {
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      /* Style the key image with reveal effect */
+      .loader-key {
+        width: 250px;
+        height: auto;
+        opacity: 0.8;
+
+        animation: reveal 2s infinite ease-in-out;
+      }
+
+      /* Reveal animation */
+      @keyframes reveal {
+        0% {
+          opacity: 0.3;
+          transform: scale(0.95);
+        }
+        50% {
+          opacity: 1;
+          transform: scale(1.05);
+        }
+        100% {
+          opacity: 0.3;
+          transform: scale(0.95);
+        }
+      }
+
+      /* Responsive adjustments */
+      @media (max-width: 768px) {
+        .loader-key {
+          width: 80px;
+          max-width: 120px;
+        }
+      }
+    </style>
   </head>
 
   <body class="bg-light">
@@ -160,6 +215,11 @@
         }
       }
     </script>
+
+    <!-- loader section -->
+    <div class="loader-container" id="loader">
+      <img src="assets/img/Key.png  " alt="Loading Key" class="loader-key" />
+    </div>
 
     <div class="th-menu-wrapper onepage-nav">
       <div class="th-menu-area text-center">
@@ -594,13 +654,20 @@
       </svg>
     </div>
 
-    <script src="assets/js/vendor/jquery-3.7.1.min.js"></script>
+    <!--==============================
+    All Js File
+============================== -->
+    <!-- Jquery -->
+    <script src="assets/js/vendor/jquery-3.7.1.min.js" defer></script>
+    <!-- Swiper Js -->
+    <script src="assets/js/swiper-bundle.min.js" defer></script>
+    <!-- Bootstrap -->
+    <script src="assets/js/bootstrap.min.js" defer></script>
 
-    <script src="assets/js/bootstrap.min.js"></script>
+    <!-- Counter Up -->
+    <script src="assets/js/jquery.counterup.min.js" defer></script>
 
-    <script src="assets/js/jquery-ui.min.js"></script>
-
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main.min.js" defer></script>
     <script>
       // In blogdetails.html (or a shared JS file)
       document.querySelectorAll('.main-menu a[href*="#"]').forEach((anchor) => {
@@ -613,6 +680,16 @@
             });
           }
         });
+      });
+
+      /** ---------------- LOADER FUNCTIONALITY ---------------- */
+      window.addEventListener("load", () => {
+        const loader = document.getElementById("loader");
+        if (loader) {
+          setTimeout(() => {
+            loader.classList.add("hidden");
+          }, 1000);
+        }
       });
     </script>
   </body>
